# agent-guardian

./: .env.example  .env.template  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  database.py  main.py
app/agent/: __init__.py  langchain_simple.py  langchain_simple_backup.py  langchain_simple_rbac.py  orchestrator_langchain.py  orchestrator_simple.py  tools_routing.py
app/api/: __init__.py  chat.py
app/config/: __init__.py  settings.py
app/guardrails/: __init__.py  config.yml  engine.py
app/guardrails/rails/: input.co  output.co  tools.co
app/observability/: __init__.py  logger.py  tracing.py
app/security/: __init__.py  rbac.py  redaction.py
data/: documents_cache.pkl  governance_agent.db
data/documents/: customer_service_guidelines.txt  data_security_guidelines.txt  employee_remote_work_policy.txt  financial_policies_expenses.txt  hr_policies_procedures.txt  it_infrastructure_security.txt  support_escalation_process.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
