[project]
name = "governance-agent"
version = "0.1.0"
description = "Secure Enterprise AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "nemoguardrails>=0.8.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "aiofiles>=23.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
